Cambios index que es

--- a/public/css/creative.css
+++ b/public/css/creative.css
@@ -25,8 +25,8 @@ hr {
   border-color: #44c868;
 }
 
-hr.light {
-  border-color: #fff;
+hr.dark {
+  border-color: #3c3c3b;
 }
 
 a {
@@ -265,6 +265,10 @@ header.masthead p {
   color: #3c3c3b !important;
 }
 
+.text-white{
+  color: #fff !important;
+}
+
 .btn {
   font-weight: 700;
   text-transform: uppercase;
@@ -275,6 +279,7 @@ header.masthead p {
 
 #localizacion{
   color: #fff !important;
+  margin-left: 2.5%;
 }
 
 .btn-xl {
