--- a/public/css/user.css
+++ b/public/css/user.css
@@ -32,5 +32,15 @@ form{
 
 #mapid{
   min-height: 700px;
-  max-height: 100%; 
+  max-height: 100%;
+  width: 100%;
+}
+
+#geolocate{
+  position:absolute;
+  top:180px;
+  left:10px;
+  border-radius: 5px;
+  z-index: 4000;
+
 }
