--- a/public/css/user.css
+++ b/public/css/user.css
@@ -2,7 +2,9 @@
   background-color: rgb(40, 167, 69);
   font-family: sans-serif;
 }
-
+.nav-link{
+  color: white
+}
 #icon{
   width: 6%;
   height: 6%;
@@ -34,6 +36,7 @@ form{
   min-height: 700px;
   max-height: 100%;
   width: 100%;
+  margin-top: -20px;
 }
 
 #geolocate{
