--- a/public/css/user.css
+++ b/public/css/user.css
@@ -50,3 +50,17 @@ form{
 #createWC{
   color: white;
 }
+
+#formWC{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid green;
+  margin: 5px;
+  margin-left: 20%;
+  margin-right: 20%;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 2px 3px 3px 2px #3c3c3b;
+}
