--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,6 +1,7 @@
 .masthead{
   width: 100%;
-  height: 100%;
+  min-height: 1000px;
+  max-height:100%;
   padding-top: 10rem;
   padding-bottom: calc(10rem - 56px);
   background-image: url("../img/FondoLogin.png");
@@ -21,6 +22,7 @@
     width: 100px;
     height: 100px;
     margin-bottom: 50px;
+    margin-top: -50px;
   }
 }
 @media (min-width: 700px){
@@ -28,6 +30,7 @@
     width: 150px;
     height: 150px;
     margin-bottom: 50px;
+    margin-top: -50px;
   }
 }
 @media (min-width: 900px){
@@ -35,6 +38,7 @@
     width: 200px;
     height: 200px;
     margin-bottom: 50px;
+    margin-top: -50px;
   }
 }
 
