--- a/public/css/user.css
+++ b/public/css/user.css
@@ -32,35 +32,47 @@ form{
   flex-direction: column;
 }
 
-#mapid{
-  min-height: 700px;
-  max-height: 100%;
-  width: 100%;
-  margin-top: -20px;
-}
-
-/* #geolocate{
-  position:absolute;
-  top:180px;
-  left:10px;
-  border-radius: 5px;
-  z-index: 4000;
-} */
-
 #createWC{
   color: white;
 }
 
-#formWC{
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  border: 1px solid green;
-  margin: 5px;
-  margin-left: 20%;
-  margin-right: 20%;
-  padding: 10px;
-  border-radius: 5px;
-  box-shadow: 2px 3px 3px 2px #3c3c3b;
+@media (min-width: 300px){
+  #formWC{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin: 5px;
+    margin-left: 1%;
+    margin-right: 1%;
+    border-radius: 5px;
+  }
+}
+@media (min-width: 700px){
+  #formWC{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid green;
+    margin: 5px;
+    margin-left: 10%;
+    margin-right: 10%;
+    border-radius: 5px;
+    box-shadow: 2px 3px 3px 2px #3c3c3b;
+  }
+}
+@media (min-width: 900px){
+  #formWC{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid green;
+    margin: 5px;
+    margin-left: 20%;
+    margin-right: 20%;
+    border-radius: 5px;
+    box-shadow: 2px 3px 3px 2px #3c3c3b;
+  }
 }
