--- a/public/css/alerts.css
+++ b/public/css/alerts.css
@@ -11,3 +11,12 @@
 .fa-times{
   font-size: 2em;
 }
+
+.alert-danger{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 10px;
+  border: 0.5px solid #721c24;
+  box-shadow: 0.5px 1.5px 1.5px 0.5px #721c24;
+}
