--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -53,6 +53,9 @@ i{
   display: flex;
   align-self: flex-start;
 }
+a{
+  text-decoration: none;
+}
 .boton{
 	width: 300px;
 	height: 110px;
@@ -122,17 +125,23 @@ i{
 }
 .num{
   font-size: 20pt;
-}
+
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
-  width: 100%;
 }
 
 td, th {
   border: 1px solid #dddddd;
   text-align: left;
   padding: 8px;
+}
+
+tbody{
+  display:block;
+  overflow: auto;
+  width: 100%;
+  height: 400px;
 }
 
 tr:nth-child(even) {
