--- a/public/css/creative.css
+++ b/public/css/creative.css
@@ -66,6 +66,11 @@ h6 {
 .bg-grey{
   background-color: #efeff4 !important;
 }
+.badge{
+  padding: 10px;
+  font-size: 11pt;
+  margin: 30px;
+}
 
 .text-faded {
   color: rgba(255, 255, 255, 0.7);
@@ -109,7 +114,7 @@ img::-moz-selection {
 }
 
 .navbar-right{
-  margin-right: 20px; 
+  margin-right: 20px;
 }
 
 #mainNav {
